--- a/social-links-profile/index.html
+++ b/social-links-profile/index.html
@@ -13,13 +13,12 @@
 <body>
 
   <div class="container">
-    <div class="avatar">
-      <img src="assets/images/avatar-jessica.jpeg" alt="Jessica's Avatar">
-    </div>
+    
+    <img src="assets/images/avatar-jessica.jpeg" alt="Jessica's Avatar">
 
-    <h3>Jessica Randall</h3>
+    <h2>Jessica Randall</h2>
     <h5>London, United Kingdom</h5>
-    <h4>"Front-end developer and avid reader."</h4>
+    <p>"Front-end developer and avid reader."</p>
 
     <div class="links">
       <a href="#">GitHub</a>
