Giving img elements their own id values

--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -13,7 +13,8 @@
 
   <div class="main">
     <div class="container">
-      <img src="assets/images/illustration-article.svg" alt="Illustration">
+      
+      <img src="assets/images/illustration-article.svg" alt="Illustration" id="illus">
 
       <div class="tag">Learning</div>
 
@@ -23,7 +24,7 @@
 
       <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-      <img src="assets/images/image-avatar.webp" alt="Greg's Avatar"><h2>Greg Hooper</h2>
+      <img src="assets/images/image-avatar.webp" alt="Greg's Avatar" id="avatar"><h2>Greg Hooper</h2>
 
     </div>
   </div>
