--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div class="main">
+  <main class="main">
     <div class="container">
       
       <img src="assets/images/illustration-article.svg" alt="Illustration" id="illus">
@@ -34,7 +34,7 @@
       
 
     </div>
-  </div>
+  </main>
 
   
   
