--- a/faq-accordion-main/src/index.html
+++ b/faq-accordion-main/src/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
       </div>    
-  
+
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -81,12 +81,13 @@
 
     </div>
     
-
   </main>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Khulekani</a>.
   </div>
+
+  <script src="toggler.js"></script>
 </body>
 </html>
