Adding the desktop background image to the HTML

--- a/faq-accordion-main/src/index.html
+++ b/faq-accordion-main/src/index.html
@@ -14,7 +14,8 @@
 <body>
 
   <div class="background">
-    <img src="../assets/images/background-pattern-mobile.svg" alt="">
+    <img src="../assets/images/background-pattern-mobile.svg" alt="Mobile Backround Image" id="mobile-bg">
+    <img src="../assets/images/background-pattern-desktop.svg" alt="Desktop Background Image" id="desktop-bg">
   </div>
   <main>
     <div class="faq-header">
