--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/main.css">
   
   <title>Tip calculator app</title>
 
@@ -27,12 +28,16 @@
         </div>
   
         <div class="select-tip">
-          <button>5%</button>
-          <button>10%</button>
-          <button>15%</button>
-          <button>25%</button>
-          <button>50%</button>
-          <input type="text" name="custom" placeholder="Custom" id="custom-tip">
+          <p>Select Tip %</p>
+          <div class="tips">
+            <button>5%</button>
+            <button>10%</button>
+            <button>15%</button>
+            <button>25%</button>
+            <button>50%</button>
+            <input type="text" name="custom" placeholder="Custom" id="custom-tip">
+          </div>
+          
         </div>
   
         <div class="num-of-ppl">
