--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -66,7 +66,7 @@
           
         </div>
   
-        <button class="reset-btn">RESET</button>
+        <button class="reset-btn" id="reset-button">RESET</button>
       </section>
     </div>
     
@@ -75,5 +75,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Khulekani</a>.
   </div>-->
+
+  <script src="main.js"></script>
 </body>
 </html>
