--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -31,11 +31,11 @@
         <div class="select-tip">
           <p>Select Tip %</p>
           <div class="tips">
-            <button>5%</button>
-            <button>10%</button>
-            <button>15%</button>
-            <button>25%</button>
-            <button>50%</button>
+            <button data-percent="5">5%</button>
+            <button data-percent="10">10%</button>
+            <button data-percent="15">15%</button>
+            <button data-percent="25">25%</button>
+            <button data-percent="50">50%</button>
             <input type="text" name="custom" placeholder="Custom" id="custom-tip">
           </div>
           
