Adding a span section for updating the value of the totals

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -56,12 +56,12 @@
 
           <div class="tip-amount">
             <span class="tip">Tip Amount<span class="per-person">/ person</span></span>
-            <span class="tip-total">$0.00</span>
+            <span class="tip-total">$<span id="tipTotal">0.00</span></span>
           </div>
     
           <div class="total-amount">
             <span class="total">Total<span class="per-person">/ person</span></span>
-            <span class="bill-total">$0.00</span>
+            <span class="bill-total">$<span id="billTotal">0.00</span></span>
           </div>
           
         </div>
