Adding a span to indicate that Zero in invalid for the number of people

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -46,6 +46,9 @@
           <span class="person-icon">
             <img src="images/icon-person.svg" alt="Person Icon Image">
           </span>
+          <span class="zero-ppl">
+            Can't be Zero 
+          </span>
           <input type="text" name="People" placeholder="0" id="ppl-input">
         </div>
       </section>
