Adding a span element to indicate invalid input

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -49,6 +49,9 @@
           <span class="zero-ppl">
             Can't be Zero 
           </span>
+          <span class="invalid-ppl">
+            Invalid Input
+          </span>
           <input type="text" name="People" placeholder="0" id="ppl-input">
         </div>
       </section>
